feture bike section

--- a/index.html
+++ b/index.html
@@ -158,7 +158,24 @@
         <!-- slider section end here -->
 
     </header>
-    <main class="md:container md:mx-auto">
+    <main class="">
+        <!-- feture bike section start here -->
+
+        <section class="my-36">
+           <div class="text-center" >
+            <h1 class="text-5xl font-bold">Fetured Bikes In This Year</h1>
+            <p class="text-sm text-[#E76F51]">Best bike collection</p>
+           </div>
+           <div class="grid grid-cols-row sm:py-10 lg:grid-cols-3 justify-items-center my-8 ">
+            <img src="./images/others/feature-bike.png" alt="">
+            <img src="./images/others/feature-bike.png" alt="">
+            <img src="./images/others/feature-bike.png" alt="">
+           </div>
+        </section>
+
+
+
+        <!-- feture bike section end here -->
 
     </main>
     <footer>
