--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <button class="btn bg-btn-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img class="w-[400px]" src="/images//slider/bike1.png" class="w-full" />
+                        <img class="w-[400px]" src="/images/slider/bike1.png" class="w-full" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -106,7 +106,7 @@
                         <button class="btn bg-btn-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img class="w-[400px]" src="/images//slider/bike2.png" class="w-full" />
+                        <img class="w-[400px]" src="/images/slider/bike2.png" class="w-full" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -126,7 +126,7 @@
                         <button class="btn bg-btn-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img class="w-[400px]" src="/images//slider/bike3.png" class="w-full" />
+                        <img class="w-[400px]" src="/images/slider/bike3.png" class="w-full" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -146,7 +146,7 @@
                         <button class="btn bg-btn-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img class="w-[400px]" src="/images//slider/bike4.png" class="w-full" />
+                        <img class="w-[400px]" src="/images/slider/bike4.png" class="w-full" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
