--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <!-- slider section end here -->
 
     </header>
-    <main class="">
+    <main class="container mx-auto">
         <!-- feture bike section start here -->
 
         <section class="my-36">
@@ -172,10 +172,51 @@
             <img src="./images/others/feature-bike.png" alt="">
            </div>
         </section>
-
-
-
         <!-- feture bike section end here -->
+
+        <!-- latest bike section start here -->
+
+        <section class="my-24">
+            <h3 class="text-5xl font-semibold text-center my-10">Latest Bike</h3>
+            <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <!-- first card -->
+                <div class="card  bg-base-100 shadow-xl">
+                    <figure><img src="./images/others/latest1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title textt-3xl">Ducati XDIAVEL S-73</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                      <div class="card-actions">
+                        <button class="btn bg-btn-primary text-white">Buy Now</button>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card  bg-base-100 shadow-xl">
+                    <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title textt-3xl">Motorcycles & Scooters</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                      <div class="card-actions">
+                        <button class="btn bg-btn-primary text-white">Buy Now</button>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card  bg-base-100 shadow-xl">
+                    <figure><img src="./images/others/latest3.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title textt-3xl">2021 Honda CBR500R</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                      <div class="card-actions">
+                        <button class="btn bg-btn-primary text-white">Buy Now</button>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
+
+
+
+
+        <!-- latest boke section end here -->
 
     </main>
     <footer>
