--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                       </div>
                     </div>
                   </div>
+                  <!-- second card -->
                 <div class="card  bg-base-100 shadow-xl">
                     <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
                     <div class="card-body">
@@ -200,6 +201,7 @@
                       </div>
                     </div>
                   </div>
+                  <!-- third card -->
                 <div class="card  bg-base-100 shadow-xl">
                     <figure><img src="./images/others/latest3.png" alt="Shoes" /></figure>
                     <div class="card-body">
@@ -212,11 +214,77 @@
                   </div>
             </div>
         </section>
-
-
-
-
         <!-- latest boke section end here -->
+        <!-- client section start here -->
+
+        <section class="my-24">
+            <h3 class="text-5xl font-semibold text-center my-10">Happy <span class="text-btn-primary">Clients says</span></h3>
+            <div class="grid gap-10 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <div class="card  bg-base-100 p-9 border border-gray-400">
+                    <figure><img class="w-36" src="./images/others/user-1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year.</p>
+                        <div class="rating gap-1 justify-center">
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-red-400" />
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-orange-400" />
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-yellow-400" />
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-lime-400" checked  />
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-green-400"  />
+                          </div>
+                      <div class=" text-center space-y-4 mt-4">
+                        <p class="text-sm font-semibold text-info">Regina Miles</p>
+                          <h1>Banker</h1>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card  bg-base-100 p-9 border border-gray-400">
+                    <figure><img class="w-36" src="./images/others/user-2.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year.</p>
+                        <div class="rating gap-1 justify-center">
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-red-400" />
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-orange-400" />
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-yellow-400" />
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-lime-400" checked  />
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-green-400"  />
+                          </div>
+                      <div class=" text-center space-y-4 mt-4">
+                        <p class="text-sm font-semibold text-info">Regina Miles</p>
+                          <h1>Banker</h1>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card  bg-base-100 p-9 border border-gray-400">
+                    <figure><img class="w-36" src="./images/others/user-3.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year.</p>
+                        <div class="rating gap-1 justify-center">
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-red-400" />
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-orange-400" />
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-yellow-400" />
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-lime-400" checked  />
+                            <input type="radio" name="rating-3" class="mask mask-heart bg-green-400"  />
+                          </div>
+                      <div class=" text-center space-y-4 mt-4">
+                        <p class="text-sm font-semibold text-info">Regina Miles</p>
+                          <h1>Banker</h1>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
+
+
+        <!-- client section end here -->
 
     </main>
     <footer>
